Issue gimp-ux#176: new GimpCheckExpander widget.
Core-only widget for now. The idea is a widget which has both an
enabled/checked state and an expanded/collapse state which will show a
child widget.

When enabling or disabling the main boolean value, it also triggers the
expansion of the child widget, but the opposite is not true.

--- a/app/widgets/meson.build
+++ b/app/widgets/meson.build
@@ -45,6 +45,7 @@ libappwidgets_sources = [
   'gimpcellrendererdashes.c',
   'gimpcellrendererviewable.c',
   'gimpchanneltreeview.c',
+  'gimpcheckexpander.c',
   'gimpcircle.c',
   'gimpclipboard.c',
   'gimpcolorbar.c',
