menus: Add Brush and Dynamics Editor to Windows menu
This allows these dockable dialogues to be added on their
own from the Windows -> Dockable Dialogs menu, rather
than requiring users to access them via the Brushes and
Dynamics dockable dialogues.

--- a/menus/dialogs-menuitems.ui.in
+++ b/menus/dialogs-menuitems.ui.in
@@ -19,7 +19,9 @@
   <section>
     <item><attribute name="action">@GROUP@.dialogs-colors</attribute></item>
     <item><attribute name="action">@GROUP@.dialogs-brushes</attribute></item>
+    <item><attribute name="action">@GROUP@.dialogs-brush-editor</attribute></item>
     <item><attribute name="action">@GROUP@.dialogs-dynamics</attribute></item>
+    <item><attribute name="action">@GROUP@.dialogs-dynamics-editor</attribute></item>
     <item><attribute name="action">@GROUP@.dialogs-mypaint-brushes</attribute></item>
     <item><attribute name="action">@GROUP@.dialogs-patterns</attribute></item>
     <item><attribute name="action">@GROUP@.dialogs-gradients</attribute></item>
