--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,7 +79,7 @@ workflow:
   # Default Docker image (unless otherwise defined)
   image: debian:${DEB_VERSION}
   variables:
-    DEB_VERSION: "bookworm"
+    DEB_VERSION: "testing"
     # Common cloning procedure
     GIT_DEPTH: "1"
     GIT_SUBMODULE_STRATEGY: none
@@ -141,7 +141,6 @@ deps-debian:
     entrypoint: [""]
   variables:
     GIT_STRATEGY: none
-    UMFPACK: libumfpack5
     PKGCONF_RELOCATABLE_OPTION: '-Dpkgconfig.relocatable=true'
   script:
     - export container=docker
@@ -182,6 +181,7 @@ deps-debian:
             libaa1-dev
             libappstream-glib-dev
             libarchive-dev
+            libbacktrace-dev
             libbz2-dev
             libcfitsio-dev
             libgexiv2-dev
@@ -208,7 +208,7 @@ deps-debian:
             libspiro-dev
             libsuitesparse-dev
             libtiff-dev
-            $UMFPACK
+            libumfpack6
             libunwind-dev
             libwebp-dev
             libwmf-dev
