po-python: Make OpenRaster text translatable

--- a/po-python/POTFILES.in
+++ b/po-python/POTFILES.in
@@ -2,6 +2,7 @@
 # marked to allow runtime translation of messages
 
 plug-ins/python/colorxhtml.py
+plug-ins/python/file-openraster.py
 plug-ins/python/foggify.py
 plug-ins/python/gradients-save-as-css.py
 plug-ins/python/histogram-export.py
