pdb: Add PDB vector layer type
This adds support for creating, refreshing,
and discarding a vector layer via the PDB,
and all required changes needed to support
that (such as creating a vector_layer type in
/pdb and GParamSpec).

--- a/app/pdb/meson.build
+++ b/app/pdb/meson.build
@@ -66,6 +66,7 @@ libappinternalprocs_sources = [
   'text-layer-cmds.c',
   'text-tool-cmds.c',
   'unit-cmds.c',
+  'vector-layer-cmds.c',
 ]
 
 libapppdb = static_library('apppdb',
