plug-ins: add a pygimp.interp on macOS too.

--- a/plug-ins/python/meson.build
+++ b/plug-ins/python/meson.build
@@ -39,14 +39,19 @@ foreach plugin : python_plugins
 endforeach
 
 # Fallback fix to the problem of non-configured interpreters (needed by MSIX)
-if platform_windows and not meson.is_cross_build() and python.found()
+if (platform_windows or platform_osx) and not meson.is_cross_build() and python.found()
   python_config = configuration_data()
-  if not stable or not release
-    #python.exe is prefered in unstable versions because of error output
-    python_config.set('PYTHON_EXE', 'python.exe')
+  if platform_windows
+    if not stable or not release
+      #python.exe is prefered in unstable versions because of error output
+      python_config.set('PYTHON_EXE', 'python.exe')
+    else
+      #pythonw.exe is prefered in stable releases because it works silently
+      python_config.set('PYTHON_EXE', 'pythonw.exe')
+    endif
   else
-    #pythonw.exe is prefered in stable releases because it works silently
-    python_config.set('PYTHON_EXE', 'pythonw.exe')
+    # A 'python3' symlink is created on macOS.
+    python_config.set('PYTHON_EXE', 'python3')
   endif
 
   configure_file(input : 'pygimp.interp.in',
