--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -436,9 +436,7 @@ gimp-flatpak-x64:
   image:
     name: $CI_REGISTRY_IMAGE:build-snap-noble-${RUNNER}
     entrypoint: [""]
-  before_script:
-    - export GIMP_PREFIX="${CI_PROJECT_DIR}/_install-${RUNNER}"
-  timeout: 80m
+  timeout: 140m
 
 deps-snap:
   extends: .snap
@@ -456,13 +454,16 @@ gimp-snap:
   needs: ["deps-snap"]
   stage: build
   variables:
+    #Snapcraft/launchpad does not allow shallow clones
     GIT_DEPTH: 0
   script:
     - sh build/linux/snap/2_build-gimp-snapcraft.sh
   artifacts:
     paths:
+      - temp*.snap
       - snapcraft*.txt
     expire_in: 2 hours
+
 
 ## WINDOWS pipelines (native MSYS2) ##
 .win:
@@ -801,6 +802,18 @@ dist-flatpak-weekly:
     expose_as: 'Linux flatpak'
     paths:
       - build/linux/flatpak/_Output/
+    expire_in: 8 days
+
+dist-snap-weekly:
+  extends: .snap
+  needs: ["gimp-snap"]
+  stage: distribution
+  script:
+    - sh build/linux/snap/3_dist-gimp-snapcraft.sh
+  artifacts:
+    expose_as: 'Linux snap'
+    paths:
+      - build/linux/snap/_Output/
     expire_in: 8 days
 
 dist-installer-weekly:
